packages/plugin-schema-macros/tests/ui/fail/multiple_defaults.stderr
error: validation error: enum `e` has multiple @default cases
 --> tests/ui/fail/multiple_defaults.rs:1:1
  |
1 | / bmux_plugin_schema_macros::schema_inline!(
2 | |     r#"
3 | | plugin p version 1;
... |
8 | | "#
9 | | );
  | |_^
  |
  = note: this error originates in the macro `bmux_plugin_schema_macros::schema_inline` (in Nightly builds, run with -Z macro-backtrace for more info)
